--- a/scss/abstracts/_settings.scss
+++ b/scss/abstracts/_settings.scss
@@ -5,6 +5,12 @@ $mobile-width: $desktop-width - 1px;
 
 :root {
   // Colors
+  --red: hsl(0, 100%, 74%) 
+  --green: hsl(154, 59%, 51%)
+  --blue: hsl(248, 32%, 49%)
+  --dark-blue: hsl(249, 10%, 26%) 
+  --grayish-blue: hsl(246, 25%, 77%)
+  
   --text-color: hsl(0, 0%, 7%);
   --accent-color: hsl(216, 61%, 54%);
   --grey300: hsl(0, 0%, 70%);
@@ -13,8 +19,8 @@ $mobile-width: $desktop-width - 1px;
   // Typography
   --base-font-size: #{$base-font-size};
   --small-font-size: #{$small-font-size};
-  --body-font-family: "Open Sans", sans-serif;
-  --headings-font-family: "Raleway", sans-serif;
+  --body-font-family: "Poppins", sans-serif;
+  --headings-font-family: var(--body-font-family);
   --h1-font-size: 2.7rem;
   --h2-font-size: 2rem;
   --h3-font-size: 1.5rem;
