--- a/css/main.css
+++ b/css/main.css
@@ -39,10 +39,17 @@ html {
 }
 
 body {
+  /* @mixin center */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  /* end @mixin center */
   /* @mixin antialias */
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   /* end @mixin antialias */
+  min-width: 100vw;
+  min-height: 100vh;
   font-family: var(--body-font-family);
   color: var(--text-color);
   line-height: 1.6em;
@@ -159,7 +166,32 @@ figcaption {
   font-size: var(--small-font-size);
 }
 
+.intro {
+  padding: 0 1.5rem;
+}
+@media screen and (min-width: 800px) {
+  .intro {
+    /* mixin mq */
+    display: grid;
+    gap: 2rem;
+    grid-template-columns: 1fr 1fr;
+    width: calc(1110px + 3rem);
+    /* end mixin mq */
+  }
+}
+
 /* ========================== § FORMS === */
+.intro__input-container {
+  margin-bottom: 1rem;
+}
+@media screen and (min-width: 800px) {
+  .intro__input-container {
+    /* mixin mq */
+    margin-bottom: 1.2rem;
+    /* end mixin mq */
+  }
+}
+
 fieldset,
 textarea {
   border: 1px solid var(--grey300);
@@ -181,7 +213,6 @@ input,
 button {
   border: 1px solid var(--grayish-blue);
   width: 100%;
-  margin-bottom: 1rem;
   padding: 1.2rem 1.3rem;
   border-radius: 0.3rem;
   font-size: 0.9rem;
@@ -192,7 +223,6 @@ button {
   input,
 button {
     /* mixin mq */
-    margin-bottom: 1.2rem;
     padding-left: 2rem;
     padding-right: 2rem;
     /* end mixin mq */
@@ -204,18 +234,8 @@ input:focus {
   border-color: var(--dark-blue);
 }
 
-.intro {
-  padding: 0 1.5rem;
-}
-@media screen and (min-width: 800px) {
-  .intro {
-    /* mixin mq */
-    display: grid;
-    gap: 2rem;
-    grid-template-columns: 1fr 1fr;
-    width: calc(1110px + 3rem);
-    /* end mixin mq */
-  }
+small {
+  font-size: 70%;
 }
 
 /* ========================== § TYPOGRAPHY === */
