--- a/scss/base/_html.scss
+++ b/scss/base/_html.scss
@@ -12,7 +12,10 @@ html {
 }
 
 body {
+  @include center(flex);
   @include antialias;
+  min-width: 100vw;
+  min-height: 100vh;
   font-family: var(--body-font-family);
   color: var(--text-color);
   line-height: 1.6em;
@@ -125,7 +128,26 @@ figcaption {
   font-size: var(--small-font-size);
 }
 
+.intro {
+  padding: 0 1.5rem;
+
+  @include mq($desktop-width, up) {
+    display: grid;
+    gap: 2rem;
+    grid-template-columns: 1fr 1fr;
+    width: calc(1110px + 3rem);
+  }
+}
+
 /* ========================== § FORMS === */
+.intro__input-container {
+  margin-bottom: 1rem;
+
+  @include mq($desktop-width, up) {
+    margin-bottom: 1.2rem;
+  }
+}
+
 fieldset,
 textarea {
   border: 1px solid var(--grey300);
@@ -147,7 +169,6 @@ input,
 button {
   border: 1px solid var(--grayish-blue);
   width: 100%;
-  margin-bottom: 1rem;
   padding: 1.2rem 1.3rem;
   border-radius: 0.3rem;
   font-size: 0.9rem;
@@ -155,7 +176,6 @@ button {
   transition: 0.2s ease-in-out;
 
   @include mq($desktop-width, up) {
-    margin-bottom: 1.2rem;
     padding-left: 2rem;
     padding-right: 2rem;
   }
@@ -166,15 +186,8 @@ input:focus {
   border-color: var(--dark-blue);
 }
 
-.intro {
-  padding: 0 1.5rem;
-
-  @include mq($desktop-width, up) {
-    display: grid;
-    gap: 2rem;
-    grid-template-columns: 1fr 1fr;
-    width: calc(1110px + 3rem);
-  }
+small {
+  font-size: 70%;
 }
 
 /* ========================== § TYPOGRAPHY === */
