--- a/css/main.css
+++ b/css/main.css
@@ -364,4 +364,22 @@ input.error {
   display: block;
 }
 
+/* ========================== § SUCCESS === */
+#success {
+  text-align: center;
+}
+#success a {
+  color: white;
+  text-decoration: underline;
+}
+
+.success-img-container img {
+  border: 2rem solid rgba(255, 255, 255, 0.4);
+  width: 100%;
+}
+
+.success__title {
+  font-size: 4rem;
+}
+
 /*# sourceMappingURL=main.css.map */
